--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -39,7 +39,7 @@
             app:civ_border_color="#FF000000"/>
 
         <TextView
-            android:id="@+id/textViewTakePic"
+            android:id="@+id/textViewTakePicture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
