Rename all activity. Add comment object class. Add and attach commentAdapter. Finish Comment Feature.

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="right"
-    tools:context=".Profile">
+    tools:context=".ProfileActivity">
 
     <TextView
         android:id="@+id/textViewBanner"
