--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -24,7 +24,7 @@
         android:src="@drawable/delete"/>
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="250dp"
         android:layout_below="@+id/textViewCommentsBanner"
         android:layout_margin="10dp"
         android:id="@+id/imageViewComment"
@@ -50,6 +50,7 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_margin="5dp"
+        android:background="@color/white"
         android:orientation="horizontal"
         android:gravity="center">
 
