--- a/app/src/main/res/layout/custom_layout_comment.xml
+++ b/app/src/main/res/layout/custom_layout_comment.xml
@@ -5,9 +5,10 @@
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/commentAvatar"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:id="@+id/commenterAvatar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
         android:src="@drawable/profile" />
 
     <LinearLayout
@@ -17,7 +18,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/commentUsername"
+            android:id="@+id/commenterUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
