add some icons for button

--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -21,7 +21,7 @@
         android:layout_margin="10dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:src="@drawable/delete"/>
+        android:src="@drawable/ic_delete"/>
 
     <ImageView
         android:id="@+id/imageViewComment"
@@ -70,7 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="5"
-            android:src="@drawable/send"/>
+            android:src="@drawable/ic_send"/>
     </LinearLayout>
 
 </RelativeLayout>
