--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -21,7 +21,8 @@
         android:layout_margin="10dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:src="@drawable/ic_delete"/>
+        android:src="@drawable/ic_delete"
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@+id/imageViewComment"
