--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="right"
-    tools:context=".ProfileActivity">
-
+    android:layout_height="match_parent">
     <TextView
         android:id="@+id/textViewBanner"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         android:padding="20dp"
         android:background="#C6CFD3"
         android:gravity="center_vertical"
         android:text="Profile"
         android:textColor="@color/white"
-        android:textSize="30sp" />
+        android:textSize="25sp" />
     <Button
         android:id="@+id/buttonSignOut"
         android:layout_width="wrap_content"
@@ -29,8 +24,6 @@
         android:text="Log Out"
         android:drawableLeft="@drawable/ic_logout"
         />
-
-
     <LinearLayout
         android:id="@+id/imageContainer"
         android:layout_below="@+id/textViewBanner"
@@ -79,31 +72,5 @@
         android:layout_above="@+id/bottomButtonContainer"
         android:layout_marginTop="0dp"
         android:scrollbars="vertical" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:id="@+id/bottomButtonContainer">
-        <Button
-            android:id="@+id/buttonGlobal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_margin="10dp"
-            android:text="@string/global"
-            android:textAllCaps="true"
-            android:drawableLeft="@drawable/ic_global"/>
-        <Button
-            android:id="@+id/buttonPost"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_margin="10dp"
-            android:text="@string/post"
-            android:textAllCaps="true"
-            android:drawableLeft="@drawable/ic_post"/>
-    </LinearLayout>
 
 </RelativeLayout>
-
